2019-11-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_string_list.c: Remove trival debug output from function
      s_string_list_delete_item, add function documentation.

2019-11-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/listsort.c: Reformat function documentation and code style.

    * src/s_string_list.c: Add debug code to print the attribute list, add
      todo documentation template for s_string_list_free and revise debug
      message, utilize __func__ macro.

2019-11-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_sheet_data.c: Update s_sheet_data_add_master_comp_list_items
      documention. Utilize __func__ macro in debug output.

    * src/s_string_list.c: Add error message when a NULL record is found in
      s_string_list_sort_master_comp_attrib_list.

    * gattrib/src/s_toplevel.c: Revise s_toplevel_init_data_set to call
      s_table_load_new_page after sorting is sorting is performed. This
      fix bug when sort-components is "enabled".

    * src/x_dialog.c: Remove unused function x_dialog_delete_attrib.

2019-11-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_object.c: Remove function s_object_add_net_attrib_to_object, and
      rename s_object_add_comp_attrib_to_object s_object_add_attrib_to_object.

2019-11-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib_dialog.c: Remove unused second argument from create_geda_switch.

    * src/s_string_list.c: Reformat function documentation, add todo documentation
      template for s_string_list_sort_all_list.

    * src/s_table.c: Update s_table_add_items_to_comp_table documentation.

    * src/x_gtksheet.c: Update x_gtksheet_add_col_labels documentation.

2019-11-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_gtksheet.c: Enable on_move callback, change underscores to hyphens in
      gtksheet signal names and add function documentation:

          * x_gtksheet_reveal_columns
          * on_move
