@@ -1,7 +1,8 @@
 2019-11-13 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/s_string_list.c: Remove trival debug output from function
-      s_string_list_delete_item, add function documentation.
+      s_string_list_delete_item, add function documentation. Sort the
+      pin attributes in s_string_list_sort_master_pin_attrib_list.
 
 2019-11-12 Wiley E. Hill <wileyhill@gmail.com>
 
